# tennis-court-finder

./: .dockerignore  .gitignore  .mise.toml  Dockerfile  FRONTEND_GUIDE.md  MONITORING_SYSTEM.md  README.md  env.example  fly.toml  main.py  openapi.yaml  pyproject.toml  test_adjacent_consolidation.py  test_adjacent_slots.py  test_api.py  test_deduplication.py  test_deduplication_clear.py  test_monitoring_system.py  test_monitoring_with_changes.py  test_overlapping_slots.py  test_slot_consolidation.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  dependencies.py  main.py  mock_data.py  models.py  rate_limit.py
app/routers/: auth.py  clubs.py  courts.py  health.py  notifications.py  pages.py  time_slots.py
app/services/: background.py  cache.py  deduplication_service.py  email.py  monitoring_service.py  notification_service.py  notifier.py  registry.py  slot_consolidation_service.py  tennis_club.py  tennis_club_integration.py
app/services/baltic_tennis/: client.py  config.py  service.py
app/services/seb_arena/: __init__.py  api_models.py  client.py  config.py  service.py
app/services/teniso_erdve/: client.py  config.py  service.py
app/templates/: base.html
app/templates/pages/: home.html  login.html  notification_form.html  notifications.html  schedule.html
app/templates/partials/: court_picker.html  slot_grid.html  subscription_list.html
scripts/: generate.py  generate_server.py
tests/: conftest.py
tests/integration_tests/: test_notification_e2e.py
tests/mocks/: __init__.py  models.py  services.py
tests/unit_tests/: test_auth.py  test_baltic_tennis.py  test_cache.py  test_clubs.py  test_courts.py  test_health.py  test_multi_club_form.py  test_notifications.py  test_notifier.py  test_rate_limit.py  test_time_slots.py
